<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Group8</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="java_android_quiz_game">Java/Android Quiz Game</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="score_">"Score: "</string>
    <string name="_0">0</string>
    <string name="question">Question</string>
    <string name="module1">module1</string>
    <string name="module2">module2</string>
    <string name="module3">module3</string>
    <string name="previous">Previous</string>
    <string name="hint">Hint</string>
    <string name="skip">Skip</string>
    <string name="quit">Quit</string>
    <string name="save">Save</string>
    <string name="need_help_">Need Help?</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_level_select">LevelSelectActivity</string>

</resources>
