<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.g8.group8.MainActivity" >

    <TextView
        android:id="@+id/main_quiz_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/java_android_quiz_game"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.21"
        android:scaleType="center"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/main_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/easy" />

    <Button
        android:id="@+id/main_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium" />

    <Button
        android:id="@+id/main_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard" />

    <Button
        android:id="@+id/main_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/need_help_" />

</LinearLayout>